fix images in portfolio.html

--- a/Web Branches/portfolio.html
+++ b/Web Branches/portfolio.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Introduction - John Lam</a> (This website)</li>
             <li><a href="https://github.com/MissMisterLOL/Ising-Model">Ising Model</a></li>
-            <img src="Ising_Model_Pattern.png" width="200">
+            <img src="../Image/Ising_Model_Pattern.png" width="200" alt="Ising model pattern">
             <li><a href="https://github.com/MissMisterLOL/SimpleCalculator"> Simple Calculator </a></li>
         </ul>
 
