fixed links in index.html

--- a/Web Branches/about_myself.html
+++ b/Web Branches/about_myself.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="Description" content="My Portfolio">
+        <meta name="Description" content="About mySelf">
         <title>Portfolio - John Lam</title>
         <style>
         table, th, td{
