--- a/Web Branches/portfolio.html
+++ b/Web Branches/portfolio.html
@@ -18,6 +18,6 @@
             <li><a href="https://github.com/MissMisterLOL/SimpleCalculator"> Simple Calculator </a></li>
         </ul>
 
-        <p><a href="index.html">Back</a></p>
+        <p><a href="../index.html">Back</a></p>
     </body>
 </html>
