fixed links and add target of anchor tag in protfolio

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <p>Welcome to view my website to recogniza myself! This is my first created 
                 HTML website to show in public. Since I am the HTML beginner, 
                 I want to create this website for practice. Hope you can enjoy it!</p>
-            <a href="Web Branches/about_myself.html">About Myself</a><br>
-            <a href="Web Branches/portfolio.html">My Code Portfolio</a>
+            <a href="about_myself.html">About Myself</a><br>
+            <a href="portfolio.html">My Code Portfolio</a>
         </main>
 
         <hr>
