--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,12 @@
         </header>
         <p><small>(The portfolio will be updated on the website)</small></p>
         <ul>
-            <li><a href="index.html">Introduction - John Lam</a> (This website)</li>
-            <li><a href="https://github.com/MissMisterLOL/Ising-Model">Ising Model</a></li>
-            <img src="../Image/Ising_Model_Pattern.png" width="200" alt="Ising model pattern">
-            <li><a href="https://github.com/MissMisterLOL/SimpleCalculator"> Simple Calculator </a></li>
+            <li><a href="index.html" target="_blank">Introduction - John Lam</a> (This website)</li>
+            <li><a href="https://github.com/MissMisterLOL/Ising-Model" target="_blank">Ising Model</a></li>
+            <img src="Image/Ising_Model_Pattern.png" width="200" alt="Ising model pattern">
+            <li><a href="https://github.com/MissMisterLOL/SimpleCalculator" target="_blank"> Simple Calculator </a></li>
         </ul>
 
-        <p><a href="../index.html">Back</a></p>
+        <p><a href="index.html">Back</a></p>
     </body>
 </html>
