--- a/about_myself.html
+++ b/about_myself.html
@@ -103,6 +103,6 @@
             </tr>
         </table>
 
-        <p><a href="../index.html">Back</p>
+        <p><a href="index.html">Back</p>
     </body>
 </html>
