add links of email and GitHub link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <footer style="background-color: rgb(198, 255, 196);">
             Author: John Lam <br>
             &#169; 2025, created by HTML<br>
-            Email: lam.kachun62@yahoo.com.hk <br>
+            Email: <a href="mailto:lam.kachun62@yahoo.com.hk">lam.kachun62@yahoo.com.hk</a> <br>
+            GitHub Link: <a href="https://github.com/MissMisterLOL" target="_blank">https://github.com/MissMisterLOL</a>
         </footer>
 
     </body>
